home: fix too large font on mobile

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -247,7 +247,7 @@ main {
 	position: absolute;
 	right: 20px;
 	top: 40px;
-	margin: 20px 30px;
+	margin: 20px 25px;
 	border-radius: var(--ef-border-radius);
 	padding: 20px;
 	width: min(50%, 480px, 100%);
